// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align content 1`] = `
Array [
  <div
    className="o-ui-ac"
  />,
  <div
    className="o-ui-ac-fe"
  />,
  <div
    className="o-ui-ac-l"
  />,
  <div
    className="o-ui-ac-n"
  />,
  <div
    className="o-ui-ac-r"
  />,
  <div
    className="o-ui-ac-sa"
  />,
  <div
    className="o-ui-ac-sb"
  />,
  <div
    className="o-ui-ac-se"
  />,
  <div
    className="o-ui-ac-fs"
  />,
  <div
    className="o-ui-ac-s"
  />,
]
`;

exports[`align items 1`] = `
Array [
  <div
    className="o-ui-ai-b"
  />,
  <div
    className="o-ui-ai-c"
  />,
  <div
    className="o-ui-ai-e"
  />,
  <div
    className="o-ui-ai-fe"
  />,
  <div
    className="o-ui-ai-fs"
  />,
  <div
    className="o-ui-ai-n"
  />,
  <div
    className="o-ui-ai-sta"
  />,
  <div
    className="o-ui-ai-str"
  />,
]
`;

exports[`align self 1`] = `
Array [
  <div
    className="o-ui-as-b"
  />,
  <div
    className="o-ui-as-c"
  />,
  <div
    className="o-ui-as-e"
  />,
  <div
    className="o-ui-as-fe"
  />,
  <div
    className="o-ui-as-fs"
  />,
  <div
    className="o-ui-as-n"
  />,
  <div
    className="o-ui-as-strt"
  />,
  <div
    className="o-ui-as-str"
  />,
]
`;

exports[`appearance 1`] = `
<div
  style={
    Object {
      "appearance": "none",
    }
  }
/>
`;

exports[`aspect ratio 1`] = `
<div
  style={
    Object {
      "aspectRatio": "1/1",
    }
  }
/>
`;

exports[`backface visibility 1`] = `
<div
  style={
    Object {
      "backfaceVisibility": "visible",
    }
  }
/>
`;

exports[`background attachment 1`] = `
Array [
  <div
    className="o-ui-bga-f"
  />,
  <div
    className="o-ui-bga-l"
  />,
  <div
    className="o-ui-bga-s"
  />,
]
`;

exports[`background clip 1`] = `
Array [
  <div
    className="o-ui-bgc-bb"
  />,
  <div
    className="o-ui-bgc-cb"
  />,
  <div
    className="o-ui-bgc-pb"
  />,
  <div
    className="o-ui-bgc-tb"
  />,
]
`;

exports[`background color 1`] = `
Array [
  <div
    className="o-ui-bg-inherit"
  />,
  <div
    className="o-ui-bg-current"
  />,
  <div
    className="o-ui-bg-transparent"
  />,
  <div
    className="o-ui-bg-white"
  />,
  <div
    className="o-ui-bg-black"
  />,
  <div
    className="o-ui-bg-marine-1"
  />,
  <div
    className="o-ui-bg-marine-2"
  />,
  <div
    className="o-ui-bg-marine-3"
  />,
  <div
    className="o-ui-bg-marine-4"
  />,
  <div
    className="o-ui-bg-marine-5"
  />,
  <div
    className="o-ui-bg-marine-6"
  />,
  <div
    className="o-ui-bg-marine-7"
  />,
  <div
    className="o-ui-bg-marine-8"
  />,
  <div
    className="o-ui-bg-marine-9"
  />,
  <div
    className="o-ui-bg-marine-10"
  />,
  <div
    className="o-ui-bg-sunray-1"
  />,
  <div
    className="o-ui-bg-sunray-2"
  />,
  <div
    className="o-ui-bg-sunray-3"
  />,
  <div
    className="o-ui-bg-sunray-4"
  />,
  <div
    className="o-ui-bg-sunray-5"
  />,
  <div
    className="o-ui-bg-sunray-6"
  />,
  <div
    className="o-ui-bg-sunray-7"
  />,
  <div
    className="o-ui-bg-sunray-8"
  />,
  <div
    className="o-ui-bg-sunray-9"
  />,
  <div
    className="o-ui-bg-sunray-10"
  />,
  <div
    className="o-ui-bg-moonstone-1"
  />,
  <div
    className="o-ui-bg-moonstone-2"
  />,
  <div
    className="o-ui-bg-moonstone-3"
  />,
  <div
    className="o-ui-bg-moonstone-4"
  />,
  <div
    className="o-ui-bg-moonstone-5"
  />,
  <div
    className="o-ui-bg-moonstone-6"
  />,
  <div
    className="o-ui-bg-moonstone-7"
  />,
  <div
    className="o-ui-bg-moonstone-8"
  />,
  <div
    className="o-ui-bg-moonstone-9"
  />,
  <div
    className="o-ui-bg-moonstone-10"
  />,
  <div
    className="o-ui-bg-cloud-1"
  />,
  <div
    className="o-ui-bg-cloud-2"
  />,
  <div
    className="o-ui-bg-cloud-3"
  />,
  <div
    className="o-ui-bg-cloud-4"
  />,
  <div
    className="o-ui-bg-cloud-5"
  />,
  <div
    className="o-ui-bg-cloud-6"
  />,
  <div
    className="o-ui-bg-cloud-7"
  />,
  <div
    className="o-ui-bg-cloud-8"
  />,
  <div
    className="o-ui-bg-cloud-10"
  />,
  <div
    className="o-ui-bg-neutral-1"
  />,
  <div
    className="o-ui-bg-neutral-2"
  />,
  <div
    className="o-ui-bg-neutral-3"
  />,
  <div
    className="o-ui-bg-neutral-4"
  />,
  <div
    className="o-ui-bg-neutral-5"
  />,
  <div
    className="o-ui-bg-neutral-6"
  />,
  <div
    className="o-ui-bg-neutral-7"
  />,
  <div
    className="o-ui-bg-neutral-8"
  />,
  <div
    className="o-ui-bg-neutral-9"
  />,
  <div
    className="o-ui-bg-neutral-10"
  />,
  <div
    className="o-ui-bg-neutral-dark-1"
  />,
  <div
    className="o-ui-bg-neutral-dark-2"
  />,
  <div
    className="o-ui-bg-neutral-dark-3"
  />,
  <div
    className="o-ui-bg-neutral-dark-4"
  />,
  <div
    className="o-ui-bg-neutral-dark-5"
  />,
  <div
    className="o-ui-bg-neutral-dark-6"
  />,
  <div
    className="o-ui-bg-neutral-dark-7"
  />,
  <div
    className="o-ui-bg-neutral-dark-8"
  />,
  <div
    className="o-ui-bg-neutral-dark-9"
  />,
  <div
    className="o-ui-bg-neutral-dark-10"
  />,
  <div
    className="o-ui-bg-beetle-1"
  />,
  <div
    className="o-ui-bg-beetle-2"
  />,
  <div
    className="o-ui-bg-beetle-3"
  />,
  <div
    className="o-ui-bg-beetle-4"
  />,
  <div
    className="o-ui-bg-beetle-5"
  />,
  <div
    className="o-ui-bg-beetle-6"
  />,
  <div
    className="o-ui-bg-beetle-7"
  />,
  <div
    className="o-ui-bg-beetle-8"
  />,
  <div
    className="o-ui-bg-beetle-9"
  />,
  <div
    className="o-ui-bg-beetle-10"
  />,
  <div
    className="o-ui-bg-botanic-1"
  />,
  <div
    className="o-ui-bg-botanic-2"
  />,
  <div
    className="o-ui-bg-botanic-3"
  />,
  <div
    className="o-ui-bg-botanic-4"
  />,
  <div
    className="o-ui-bg-botanic-5"
  />,
  <div
    className="o-ui-bg-botanic-6"
  />,
  <div
    className="o-ui-bg-botanic-7"
  />,
  <div
    className="o-ui-bg-botanic-8"
  />,
  <div
    className="o-ui-bg-botanic-9"
  />,
  <div
    className="o-ui-bg-botanic-10"
  />,
  <div
    className="o-ui-bg-primary-1"
  />,
  <div
    className="o-ui-bg-primary-2"
  />,
  <div
    className="o-ui-bg-primary-3"
  />,
  <div
    className="o-ui-bg-primary-4"
  />,
  <div
    className="o-ui-bg-primary-5"
  />,
  <div
    className="o-ui-bg-primary-6"
  />,
  <div
    className="o-ui-bg-primary-7"
  />,
  <div
    className="o-ui-bg-primary-8"
  />,
  <div
    className="o-ui-bg-primary-9"
  />,
  <div
    className="o-ui-bg-primary-10"
  />,
  <div
    className="o-ui-bg-alias-1"
  />,
  <div
    className="o-ui-bg-alias-2"
  />,
  <div
    className="o-ui-bg-alias-3"
  />,
  <div
    className="o-ui-bg-alias-4"
  />,
  <div
    className="o-ui-bg-alias-5"
  />,
  <div
    className="o-ui-bg-alias-6"
  />,
  <div
    className="o-ui-bg-alias-info-1"
  />,
  <div
    className="o-ui-bg-alias-negative-1"
  />,
  <div
    className="o-ui-bg-alias-negative-2"
  />,
  <div
    className="o-ui-bg-alias-positive-1"
  />,
  <div
    className="o-ui-bg-alias-positive-2"
  />,
  <div
    className="o-ui-bg-alias-primary-1"
  />,
  <div
    className="o-ui-bg-alias-primary-2"
  />,
  <div
    className="o-ui-bg-alias-warning-1"
  />,
  <div
    className="o-ui-bg-alias-warning-2"
  />,
]
`;

exports[`background image 1`] = `
<div
  style={
    Object {
      "backgroundImage": "url(cat.png)",
    }
  }
/>
`;

exports[`background origin 1`] = `
<div
  style={
    Object {
      "backgroundOrigin": "content-box",
    }
  }
/>
`;

exports[`background position 1`] = `
Array [
  <div
    className="o-ui-bgp-b"
  />,
  <div
    className="o-ui-bgp-c"
  />,
  <div
    className="o-ui-bgp-l"
  />,
  <div
    className="o-ui-bgp-lb"
  />,
  <div
    className="o-ui-bgp-lt"
  />,
  <div
    className="o-ui-bgp-r"
  />,
  <div
    className="o-ui-bgp-rb"
  />,
  <div
    className="o-ui-bgp-rt"
  />,
  <div
    className="o-ui-bgp-t"
  />,
]
`;

exports[`background repeat 1`] = `
Array [
  <div
    style={
      Object {
        "backgroundRepeat": "no-repeat",
      }
    }
  />,
  <div
    style={
      Object {
        "backgroundRepeat": "repeat",
      }
    }
  />,
  <div
    style={
      Object {
        "backgroundRepeat": "repeat-x",
      }
    }
  />,
  <div
    style={
      Object {
        "backgroundRepeat": "repeat-y",
      }
    }
  />,
  <div
    style={
      Object {
        "backgroundRepeat": "round",
      }
    }
  />,
  <div
    style={
      Object {
        "backgroundRepeat": "space",
      }
    }
  />,
]
`;

exports[`background size 1`] = `
Array [
  <div
    className="o-ui-bgs-a"
  />,
  <div
    className="o-ui-bgs-cnt"
  />,
  <div
    className="o-ui-bgs-cvr"
  />,
]
`;

exports[`border 1`] = `
Array [
  <div
    className="o-ui-ba o-ui-ba-n"
  />,
  <div
    className="o-ui-ba o-ui-b-inherit"
  />,
  <div
    className="o-ui-ba o-ui-b-current"
  />,
  <div
    className="o-ui-ba o-ui-b-transparent"
  />,
  <div
    className="o-ui-ba o-ui-b-white"
  />,
  <div
    className="o-ui-ba o-ui-b-black"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-1"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-2"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-3"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-4"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-5"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-6"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-7"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-8"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-9"
  />,
  <div
    className="o-ui-ba o-ui-b-marine-10"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-1"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-2"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-3"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-4"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-5"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-6"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-7"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-8"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-9"
  />,
  <div
    className="o-ui-ba o-ui-b-sunray-10"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-1"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-2"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-3"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-4"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-5"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-6"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-7"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-8"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-9"
  />,
  <div
    className="o-ui-ba o-ui-b-moonstone-10"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-1"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-2"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-3"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-4"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-5"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-6"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-7"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-8"
  />,
  <div
    className="o-ui-ba o-ui-b-cloud-10"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-1"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-2"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-3"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-4"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-5"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-6"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-7"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-8"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-9"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-10"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-1"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-2"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-3"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-4"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-5"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-6"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-7"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-8"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-9"
  />,
  <div
    className="o-ui-ba o-ui-b-neutral-dark-10"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-1"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-2"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-3"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-4"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-5"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-6"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-7"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-8"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-9"
  />,
  <div
    className="o-ui-ba o-ui-b-beetle-10"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-1"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-2"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-3"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-4"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-5"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-6"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-7"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-8"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-9"
  />,
  <div
    className="o-ui-ba o-ui-b-botanic-10"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-1"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-2"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-3"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-4"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-5"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-6"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-7"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-8"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-9"
  />,
  <div
    className="o-ui-ba o-ui-b-primary-10"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-1"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-2"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-3"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-4"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-negative-1"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-negative-1-translucent"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-negative-2"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-positive-1"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-primary-1"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-primary-1-translucent"
  />,
  <div
    className="o-ui-ba o-ui-b-alias-warning-1"
  />,
  <div
    className="o-ui-ba o-ui-ba-n"
  />,
  <div
    className="o-ui-ba"
    style={
      Object {
        "borderColor": "hsla(223, 12%, 87%, 1)",
      }
    }
  />,
]
`;

exports[`border bottom 1`] = `
Array [
  <div
    className="o-ui-bb o-ui-bb-n"
  />,
  <div
    className="o-ui-bb o-ui-b-inherit"
  />,
  <div
    className="o-ui-bb o-ui-b-current"
  />,
  <div
    className="o-ui-bb o-ui-b-transparent"
  />,
  <div
    className="o-ui-bb o-ui-b-white"
  />,
  <div
    className="o-ui-bb o-ui-b-black"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-1"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-2"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-3"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-4"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-5"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-6"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-7"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-8"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-9"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-10"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-1"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-2"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-3"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-4"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-5"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-6"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-7"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-8"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-9"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-10"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-1"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-2"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-3"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-4"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-5"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-6"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-7"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-8"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-9"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-10"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-1"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-2"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-3"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-4"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-5"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-6"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-7"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-8"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-10"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-1"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-2"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-3"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-4"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-5"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-6"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-7"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-8"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-9"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-10"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-1"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-2"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-3"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-4"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-5"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-6"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-7"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-8"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-9"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-10"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-1"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-2"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-3"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-4"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-5"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-6"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-7"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-8"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-9"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-10"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-1"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-2"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-3"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-4"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-5"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-6"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-7"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-8"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-9"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-10"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-1"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-2"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-3"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-4"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-5"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-6"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-7"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-8"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-9"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-10"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-2"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-3"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-4"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-negative-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-negative-1-translucent"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-negative-2"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-positive-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-primary-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-primary-1-translucent"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-warning-1"
  />,
  <div
    className="o-ui-bb o-ui-bb-n"
  />,
  <div
    className="o-ui-bb"
    style={
      Object {
        "borderColor": "hsla(223, 12%, 87%, 1)",
      }
    }
  />,
]
`;

exports[`border bottom 2`] = `
Array [
  <div
    className="o-ui-bb o-ui-bb-n"
  />,
  <div
    className="o-ui-bb o-ui-b-inherit"
  />,
  <div
    className="o-ui-bb o-ui-b-current"
  />,
  <div
    className="o-ui-bb o-ui-b-transparent"
  />,
  <div
    className="o-ui-bb o-ui-b-white"
  />,
  <div
    className="o-ui-bb o-ui-b-black"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-1"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-2"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-3"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-4"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-5"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-6"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-7"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-8"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-9"
  />,
  <div
    className="o-ui-bb o-ui-b-marine-10"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-1"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-2"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-3"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-4"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-5"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-6"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-7"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-8"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-9"
  />,
  <div
    className="o-ui-bb o-ui-b-sunray-10"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-1"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-2"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-3"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-4"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-5"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-6"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-7"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-8"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-9"
  />,
  <div
    className="o-ui-bb o-ui-b-moonstone-10"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-1"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-2"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-3"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-4"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-5"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-6"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-7"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-8"
  />,
  <div
    className="o-ui-bb o-ui-b-cloud-10"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-1"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-2"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-3"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-4"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-5"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-6"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-7"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-8"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-9"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-10"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-1"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-2"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-3"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-4"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-5"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-6"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-7"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-8"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-9"
  />,
  <div
    className="o-ui-bb o-ui-b-neutral-dark-10"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-1"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-2"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-3"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-4"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-5"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-6"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-7"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-8"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-9"
  />,
  <div
    className="o-ui-bb o-ui-b-beetle-10"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-1"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-2"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-3"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-4"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-5"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-6"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-7"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-8"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-9"
  />,
  <div
    className="o-ui-bb o-ui-b-botanic-10"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-1"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-2"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-3"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-4"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-5"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-6"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-7"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-8"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-9"
  />,
  <div
    className="o-ui-bb o-ui-b-primary-10"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-2"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-3"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-4"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-negative-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-negative-1-translucent"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-negative-2"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-positive-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-primary-1"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-primary-1-translucent"
  />,
  <div
    className="o-ui-bb o-ui-b-alias-warning-1"
  />,
  <div
    className="o-ui-bb o-ui-bb-n"
  />,
  <div
    className="o-ui-bb"
    style={
      Object {
        "borderColor": "hsla(223, 12%, 87%, 1)",
      }
    }
  />,
]
`;

exports[`border bottom left radius 1`] = `
<div
  style={
    Object {
      "borderBottomLeftRadius": "1px",
    }
  }
/>
`;

exports[`border bottom right radius 1`] = `
<div
  style={
    Object {
      "borderBottomRightRadius": "1px",
    }
  }
/>
`;

exports[`border left 1`] = `
Array [
  <div
    className="o-ui-bl o-ui-bl-n"
  />,
  <div
    className="o-ui-bl o-ui-b-inherit"
  />,
  <div
    className="o-ui-bl o-ui-b-current"
  />,
  <div
    className="o-ui-bl o-ui-b-transparent"
  />,
  <div
    className="o-ui-bl o-ui-b-white"
  />,
  <div
    className="o-ui-bl o-ui-b-black"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-1"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-2"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-3"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-4"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-5"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-6"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-7"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-8"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-9"
  />,
  <div
    className="o-ui-bl o-ui-b-marine-10"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-1"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-2"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-3"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-4"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-5"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-6"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-7"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-8"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-9"
  />,
  <div
    className="o-ui-bl o-ui-b-sunray-10"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-1"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-2"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-3"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-4"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-5"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-6"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-7"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-8"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-9"
  />,
  <div
    className="o-ui-bl o-ui-b-moonstone-10"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-1"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-2"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-3"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-4"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-5"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-6"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-7"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-8"
  />,
  <div
    className="o-ui-bl o-ui-b-cloud-10"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-1"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-2"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-3"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-4"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-5"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-6"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-7"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-8"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-9"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-10"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-1"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-2"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-3"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-4"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-5"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-6"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-7"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-8"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-9"
  />,
  <div
    className="o-ui-bl o-ui-b-neutral-dark-10"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-1"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-2"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-3"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-4"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-5"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-6"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-7"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-8"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-9"
  />,
  <div
    className="o-ui-bl o-ui-b-beetle-10"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-1"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-2"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-3"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-4"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-5"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-6"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-7"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-8"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-9"
  />,
  <div
    className="o-ui-bl o-ui-b-botanic-10"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-1"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-2"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-3"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-4"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-5"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-6"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-7"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-8"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-9"
  />,
  <div
    className="o-ui-bl o-ui-b-primary-10"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-1"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-2"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-3"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-4"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-negative-1"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-negative-1-translucent"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-negative-2"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-positive-1"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-primary-1"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-primary-1-translucent"
  />,
  <div
    className="o-ui-bl o-ui-b-alias-warning-1"
  />,
  <div
    className="o-ui-bl o-ui-bl-n"
  />,
  <div
    className="o-ui-bl"
    style={
      Object {
        "borderColor": "hsla(223, 12%, 87%, 1)",
      }
    }
  />,
]
`;

exports[`border radius 1`] = `
Array [
  <div
    className="o-ui-bdrs-0"
  />,
  <div
    className="o-ui-bdrs-1"
  />,
  <div
    className="o-ui-bdrs-2"
  />,
  <div
    className="o-ui-bdrs-3"
  />,
  <div
    className="o-ui-bdrs-4"
  />,
  <div
    className="o-ui-bdrs-100"
  />,
  <div
    className="o-ui-pill"
  />,
]
`;

exports[`border right 1`] = `
Array [
  <div
    className="o-ui-br o-ui-br-n"
  />,
  <div
    className="o-ui-br o-ui-b-inherit"
  />,
  <div
    className="o-ui-br o-ui-b-current"
  />,
  <div
    className="o-ui-br o-ui-b-transparent"
  />,
  <div
    className="o-ui-br o-ui-b-white"
  />,
  <div
    className="o-ui-br o-ui-b-black"
  />,
  <div
    className="o-ui-br o-ui-b-marine-1"
  />,
  <div
    className="o-ui-br o-ui-b-marine-2"
  />,
  <div
    className="o-ui-br o-ui-b-marine-3"
  />,
  <div
    className="o-ui-br o-ui-b-marine-4"
  />,
  <div
    className="o-ui-br o-ui-b-marine-5"
  />,
  <div
    className="o-ui-br o-ui-b-marine-6"
  />,
  <div
    className="o-ui-br o-ui-b-marine-7"
  />,
  <div
    className="o-ui-br o-ui-b-marine-8"
  />,
  <div
    className="o-ui-br o-ui-b-marine-9"
  />,
  <div
    className="o-ui-br o-ui-b-marine-10"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-1"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-2"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-3"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-4"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-5"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-6"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-7"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-8"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-9"
  />,
  <div
    className="o-ui-br o-ui-b-sunray-10"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-1"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-2"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-3"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-4"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-5"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-6"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-7"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-8"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-9"
  />,
  <div
    className="o-ui-br o-ui-b-moonstone-10"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-1"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-2"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-3"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-4"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-5"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-6"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-7"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-8"
  />,
  <div
    className="o-ui-br o-ui-b-cloud-10"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-1"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-2"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-3"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-4"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-5"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-6"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-7"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-8"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-9"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-10"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-1"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-2"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-3"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-4"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-5"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-6"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-7"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-8"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-9"
  />,
  <div
    className="o-ui-br o-ui-b-neutral-dark-10"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-1"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-2"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-3"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-4"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-5"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-6"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-7"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-8"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-9"
  />,
  <div
    className="o-ui-br o-ui-b-beetle-10"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-1"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-2"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-3"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-4"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-5"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-6"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-7"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-8"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-9"
  />,
  <div
    className="o-ui-br o-ui-b-botanic-10"
  />,
  <div
    className="o-ui-br o-ui-b-primary-1"
  />,
  <div
    className="o-ui-br o-ui-b-primary-2"
  />,
  <div
    className="o-ui-br o-ui-b-primary-3"
  />,
  <div
    className="o-ui-br o-ui-b-primary-4"
  />,
  <div
    className="o-ui-br o-ui-b-primary-5"
  />,
  <div
    className="o-ui-br o-ui-b-primary-6"
  />,
  <div
    className="o-ui-br o-ui-b-primary-7"
  />,
  <div
    className="o-ui-br o-ui-b-primary-8"
  />,
  <div
    className="o-ui-br o-ui-b-primary-9"
  />,
  <div
    className="o-ui-br o-ui-b-primary-10"
  />,
  <div
    className="o-ui-br o-ui-b-alias-1"
  />,
  <div
    className="o-ui-br o-ui-b-alias-2"
  />,
  <div
    className="o-ui-br o-ui-b-alias-3"
  />,
  <div
    className="o-ui-br o-ui-b-alias-4"
  />,
  <div
    className="o-ui-br o-ui-b-alias-negative-1"
  />,
  <div
    className="o-ui-br o-ui-b-alias-negative-1-translucent"
  />,
  <div
    className="o-ui-br o-ui-b-alias-negative-2"
  />,
  <div
    className="o-ui-br o-ui-b-alias-positive-1"
  />,
  <div
    className="o-ui-br o-ui-b-alias-primary-1"
  />,
  <div
    className="o-ui-br o-ui-b-alias-primary-1-translucent"
  />,
  <div
    className="o-ui-br o-ui-b-alias-warning-1"
  />,
  <div
    className="o-ui-br o-ui-br-n"
  />,
  <div
    className="o-ui-br"
    style={
      Object {
        "borderColor": "hsla(223, 12%, 87%, 1)",
      }
    }
  />,
]
`;

exports[`border top 1`] = `
Array [
  <div
    className="o-ui-bt o-ui-bt-n"
  />,
  <div
    className="o-ui-bt o-ui-b-inherit"
  />,
  <div
    className="o-ui-bt o-ui-b-current"
  />,
  <div
    className="o-ui-bt o-ui-b-transparent"
  />,
  <div
    className="o-ui-bt o-ui-b-white"
  />,
  <div
    className="o-ui-bt o-ui-b-black"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-1"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-2"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-3"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-4"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-5"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-6"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-7"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-8"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-9"
  />,
  <div
    className="o-ui-bt o-ui-b-marine-10"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-1"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-2"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-3"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-4"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-5"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-6"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-7"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-8"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-9"
  />,
  <div
    className="o-ui-bt o-ui-b-sunray-10"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-1"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-2"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-3"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-4"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-5"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-6"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-7"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-8"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-9"
  />,
  <div
    className="o-ui-bt o-ui-b-moonstone-10"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-1"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-2"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-3"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-4"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-5"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-6"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-7"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-8"
  />,
  <div
    className="o-ui-bt o-ui-b-cloud-10"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-1"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-2"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-3"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-4"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-5"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-6"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-7"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-8"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-9"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-10"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-1"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-2"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-3"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-4"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-5"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-6"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-7"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-8"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-9"
  />,
  <div
    className="o-ui-bt o-ui-b-neutral-dark-10"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-1"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-2"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-3"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-4"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-5"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-6"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-7"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-8"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-9"
  />,
  <div
    className="o-ui-bt o-ui-b-beetle-10"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-1"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-2"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-3"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-4"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-5"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-6"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-7"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-8"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-9"
  />,
  <div
    className="o-ui-bt o-ui-b-botanic-10"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-1"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-2"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-3"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-4"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-5"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-6"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-7"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-8"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-9"
  />,
  <div
    className="o-ui-bt o-ui-b-primary-10"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-1"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-2"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-3"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-4"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-negative-1"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-negative-1-translucent"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-negative-2"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-positive-1"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-primary-1"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-primary-1-translucent"
  />,
  <div
    className="o-ui-bt o-ui-b-alias-warning-1"
  />,
  <div
    className="o-ui-bt o-ui-bt-n"
  />,
  <div
    className="o-ui-bt"
    style={
      Object {
        "borderColor": "hsla(223, 12%, 87%, 1)",
      }
    }
  />,
]
`;

exports[`border top left radius 1`] = `
<div
  style={
    Object {
      "borderTopLeftRadius": "1px",
    }
  }
/>
`;

exports[`border top right radius 1`] = `
<div
  style={
    Object {
      "borderTopRightRadius": "1px",
    }
  }
/>
`;

exports[`bottom 1`] = `
<div
  style={
    Object {
      "bottom": "1px",
    }
  }
/>
`;

exports[`box shadow 1`] = `
Array [
  <div
    className="o-ui-bxsh-1"
  />,
  <div
    className="o-ui-bxsh-2"
  />,
  <div
    className="o-ui-bxsh-3"
  />,
  <div
    className="o-ui-bxsh-4"
  />,
  <div
    className="o-ui-bxsh-alias-floating"
  />,
  <div
    className="o-ui-bxsh-alias-lifted"
  />,
  <div
    className="o-ui-bxsh-alias-raised"
  />,
  <div
    className="o-ui-bxsh-alias-skim"
  />,
]
`;

exports[`box sizing 1`] = `
Array [
  <div
    className="o-ui-bs-bb"
  />,
  <div
    className="o-ui-bs-cb"
  />,
]
`;

exports[`color 1`] = `
Array [
  <div
    className="o-ui-inherit"
  />,
  <div
    className="o-ui-current"
  />,
  <div
    className="o-ui-transparent"
  />,
  <div
    className="o-ui-white"
  />,
  <div
    className="o-ui-black"
  />,
  <div
    className="o-ui-marine-1"
  />,
  <div
    className="o-ui-marine-2"
  />,
  <div
    className="o-ui-marine-3"
  />,
  <div
    className="o-ui-marine-4"
  />,
  <div
    className="o-ui-marine-5"
  />,
  <div
    className="o-ui-marine-6"
  />,
  <div
    className="o-ui-marine-7"
  />,
  <div
    className="o-ui-marine-8"
  />,
  <div
    className="o-ui-marine-9"
  />,
  <div
    className="o-ui-marine-10"
  />,
  <div
    className="o-ui-sunray-1"
  />,
  <div
    className="o-ui-sunray-2"
  />,
  <div
    className="o-ui-sunray-3"
  />,
  <div
    className="o-ui-sunray-4"
  />,
  <div
    className="o-ui-sunray-5"
  />,
  <div
    className="o-ui-sunray-6"
  />,
  <div
    className="o-ui-sunray-7"
  />,
  <div
    className="o-ui-sunray-8"
  />,
  <div
    className="o-ui-sunray-9"
  />,
  <div
    className="o-ui-sunray-10"
  />,
  <div
    className="o-ui-moonstone-1"
  />,
  <div
    className="o-ui-moonstone-2"
  />,
  <div
    className="o-ui-moonstone-3"
  />,
  <div
    className="o-ui-moonstone-4"
  />,
  <div
    className="o-ui-moonstone-5"
  />,
  <div
    className="o-ui-moonstone-6"
  />,
  <div
    className="o-ui-moonstone-7"
  />,
  <div
    className="o-ui-moonstone-8"
  />,
  <div
    className="o-ui-moonstone-9"
  />,
  <div
    className="o-ui-moonstone-10"
  />,
  <div
    className="o-ui-cloud-1"
  />,
  <div
    className="o-ui-cloud-2"
  />,
  <div
    className="o-ui-cloud-3"
  />,
  <div
    className="o-ui-cloud-4"
  />,
  <div
    className="o-ui-cloud-5"
  />,
  <div
    className="o-ui-cloud-6"
  />,
  <div
    className="o-ui-cloud-7"
  />,
  <div
    className="o-ui-cloud-8"
  />,
  <div
    className="o-ui-cloud-10"
  />,
  <div
    className="o-ui-neutral-1"
  />,
  <div
    className="o-ui-neutral-2"
  />,
  <div
    className="o-ui-neutral-3"
  />,
  <div
    className="o-ui-neutral-4"
  />,
  <div
    className="o-ui-neutral-5"
  />,
  <div
    className="o-ui-neutral-6"
  />,
  <div
    className="o-ui-neutral-7"
  />,
  <div
    className="o-ui-neutral-8"
  />,
  <div
    className="o-ui-neutral-9"
  />,
  <div
    className="o-ui-neutral-10"
  />,
  <div
    className="o-ui-neutral-dark-1"
  />,
  <div
    className="o-ui-neutral-dark-2"
  />,
  <div
    className="o-ui-neutral-dark-3"
  />,
  <div
    className="o-ui-neutral-dark-4"
  />,
  <div
    className="o-ui-neutral-dark-5"
  />,
  <div
    className="o-ui-neutral-dark-6"
  />,
  <div
    className="o-ui-neutral-dark-7"
  />,
  <div
    className="o-ui-neutral-dark-8"
  />,
  <div
    className="o-ui-neutral-dark-9"
  />,
  <div
    className="o-ui-neutral-dark-10"
  />,
  <div
    className="o-ui-beetle-1"
  />,
  <div
    className="o-ui-beetle-2"
  />,
  <div
    className="o-ui-beetle-3"
  />,
  <div
    className="o-ui-beetle-4"
  />,
  <div
    className="o-ui-beetle-5"
  />,
  <div
    className="o-ui-beetle-6"
  />,
  <div
    className="o-ui-beetle-7"
  />,
  <div
    className="o-ui-beetle-8"
  />,
  <div
    className="o-ui-beetle-9"
  />,
  <div
    className="o-ui-beetle-10"
  />,
  <div
    className="o-ui-botanic-1"
  />,
  <div
    className="o-ui-botanic-2"
  />,
  <div
    className="o-ui-botanic-3"
  />,
  <div
    className="o-ui-botanic-4"
  />,
  <div
    className="o-ui-botanic-5"
  />,
  <div
    className="o-ui-botanic-6"
  />,
  <div
    className="o-ui-botanic-7"
  />,
  <div
    className="o-ui-botanic-8"
  />,
  <div
    className="o-ui-botanic-9"
  />,
  <div
    className="o-ui-botanic-10"
  />,
  <div
    className="o-ui-primary-1"
  />,
  <div
    className="o-ui-primary-2"
  />,
  <div
    className="o-ui-primary-3"
  />,
  <div
    className="o-ui-primary-4"
  />,
  <div
    className="o-ui-primary-5"
  />,
  <div
    className="o-ui-primary-6"
  />,
  <div
    className="o-ui-primary-7"
  />,
  <div
    className="o-ui-primary-8"
  />,
  <div
    className="o-ui-primary-9"
  />,
  <div
    className="o-ui-primary-10"
  />,
  <div
    className="o-ui-text-alias-1"
  />,
  <div
    className="o-ui-text-alias-2"
  />,
  <div
    className="o-ui-text-alias-3"
  />,
  <div
    className="o-ui-text-alias-4"
  />,
  <div
    className="o-ui-text-alias-info-1"
  />,
  <div
    className="o-ui-text-alias-input-placeholder"
  />,
  <div
    className="o-ui-text-alias-input-selection"
  />,
  <div
    className="o-ui-text-alias-negative-1"
  />,
  <div
    className="o-ui-text-alias-negative-2"
  />,
  <div
    className="o-ui-text-alias-positive-1"
  />,
  <div
    className="o-ui-text-alias-positive-2"
  />,
  <div
    className="o-ui-text-alias-primary-1"
  />,
  <div
    className="o-ui-text-alias-warning-1"
  />,
  <div
    className="o-ui-text-alias-warning-2"
  />,
]
`;

exports[`color scheme 1`] = `
<div
  style={
    Object {
      "colorScheme": "dark",
    }
  }
/>
`;

exports[`column count 1`] = `
<div
  style={
    Object {
      "columnCount": 1,
    }
  }
/>
`;

exports[`column gap 1`] = `
Array [
  <div
    className="o-ui-c-g-0"
  />,
  <div
    className="o-ui-c-g-1"
  />,
  <div
    className="o-ui-c-g-2"
  />,
  <div
    className="o-ui-c-g-3"
  />,
  <div
    className="o-ui-c-g-4"
  />,
  <div
    className="o-ui-c-g-5"
  />,
  <div
    className="o-ui-c-g-6"
  />,
  <div
    className="o-ui-c-g-7"
  />,
  <div
    className="o-ui-c-g-8"
  />,
  <div
    className="o-ui-c-g-9"
  />,
  <div
    className="o-ui-c-g-10"
  />,
  <div
    className="o-ui-c-g-11"
  />,
  <div
    className="o-ui-c-g-12"
  />,
  <div
    className="o-ui-c-g-13"
  />,
]
`;

exports[`column width 1`] = `
<div
  style={
    Object {
      "columnWidth": "100px",
    }
  }
/>
`;

exports[`contain 1`] = `
<div
  style={
    Object {
      "contain": "strict",
    }
  }
/>
`;

exports[`content 1`] = `
<div
  style={
    Object {
      "content": "linear-gradient(#e66465, #9198e5)",
    }
  }
/>
`;

exports[`content visibility 1`] = `
<div
  style={
    Object {
      "contentVisibility": "hidden",
    }
  }
/>
`;

exports[`cursor 1`] = `
Array [
  <div
    className="o-ui-c-a"
  />,
  <div
    className="o-ui-c-c"
  />,
  <div
    className="o-ui-c-g"
  />,
  <div
    className="o-ui-c-h"
  />,
  <div
    className="o-ui-c-na"
  />,
  <div
    className="o-ui-c-w"
  />,
  <div
    className="o-ui-c-zi"
  />,
]
`;

exports[`display 1`] = `
Array [
  <div
    className="o-ui-d-b"
  />,
  <div
    className="o-ui-d-f"
  />,
  <div
    className="o-ui-d-g"
  />,
  <div
    className="o-ui-d-i"
  />,
  <div
    className="o-ui-d-ib"
  />,
  <div
    className="o-ui-d-if"
  />,
  <div
    className="o-ui-d-ig"
  />,
  <div
    className="o-ui-d-it"
  />,
  <div
    className="o-ui-d-li"
  />,
  <div
    className="o-ui-d-n"
  />,
  <div
    className="o-ui-d-t"
  />,
  <div
    className="o-ui-d-t-cpn"
  />,
  <div
    className="o-ui-d-tcl"
  />,
  <div
    className="o-ui-d-tc"
  />,
  <div
    className="o-ui-d-tcg"
  />,
  <div
    className="o-ui-d-tfg"
  />,
  <div
    className="o-ui-d-thg"
  />,
  <div
    className="o-ui-d-tr"
  />,
  <div
    className="o-ui-d-trg"
  />,
]
`;

exports[`fill 1`] = `
Array [
  <div
    className="o-ui-f-inherit"
  />,
  <div
    className="o-ui-f-current"
  />,
  <div
    className="o-ui-f-transparent"
  />,
  <div
    className="o-ui-f-white"
  />,
  <div
    className="o-ui-f-black"
  />,
  <div
    className="o-ui-f-marine-1"
  />,
  <div
    className="o-ui-f-marine-2"
  />,
  <div
    className="o-ui-f-marine-3"
  />,
  <div
    className="o-ui-f-marine-4"
  />,
  <div
    className="o-ui-f-marine-5"
  />,
  <div
    className="o-ui-f-marine-6"
  />,
  <div
    className="o-ui-f-marine-7"
  />,
  <div
    className="o-ui-f-marine-8"
  />,
  <div
    className="o-ui-f-marine-9"
  />,
  <div
    className="o-ui-f-marine-10"
  />,
  <div
    className="o-ui-f-sunray-1"
  />,
  <div
    className="o-ui-f-sunray-2"
  />,
  <div
    className="o-ui-f-sunray-3"
  />,
  <div
    className="o-ui-f-sunray-4"
  />,
  <div
    className="o-ui-f-sunray-5"
  />,
  <div
    className="o-ui-f-sunray-6"
  />,
  <div
    className="o-ui-f-sunray-7"
  />,
  <div
    className="o-ui-f-sunray-8"
  />,
  <div
    className="o-ui-f-sunray-9"
  />,
  <div
    className="o-ui-f-sunray-10"
  />,
  <div
    className="o-ui-f-moonstone-1"
  />,
  <div
    className="o-ui-f-moonstone-2"
  />,
  <div
    className="o-ui-f-moonstone-3"
  />,
  <div
    className="o-ui-f-moonstone-4"
  />,
  <div
    className="o-ui-f-moonstone-5"
  />,
  <div
    className="o-ui-f-moonstone-6"
  />,
  <div
    className="o-ui-f-moonstone-7"
  />,
  <div
    className="o-ui-f-moonstone-8"
  />,
  <div
    className="o-ui-f-moonstone-9"
  />,
  <div
    className="o-ui-f-moonstone-10"
  />,
  <div
    className="o-ui-f-cloud-1"
  />,
  <div
    className="o-ui-f-cloud-2"
  />,
  <div
    className="o-ui-f-cloud-3"
  />,
  <div
    className="o-ui-f-cloud-4"
  />,
  <div
    className="o-ui-f-cloud-5"
  />,
  <div
    className="o-ui-f-cloud-6"
  />,
  <div
    className="o-ui-f-cloud-7"
  />,
  <div
    className="o-ui-f-cloud-8"
  />,
  <div
    className="o-ui-f-cloud-10"
  />,
  <div
    className="o-ui-f-neutral-1"
  />,
  <div
    className="o-ui-f-neutral-2"
  />,
  <div
    className="o-ui-f-neutral-3"
  />,
  <div
    className="o-ui-f-neutral-4"
  />,
  <div
    className="o-ui-f-neutral-5"
  />,
  <div
    className="o-ui-f-neutral-6"
  />,
  <div
    className="o-ui-f-neutral-7"
  />,
  <div
    className="o-ui-f-neutral-8"
  />,
  <div
    className="o-ui-f-neutral-9"
  />,
  <div
    className="o-ui-f-neutral-10"
  />,
  <div
    className="o-ui-f-neutral-dark-1"
  />,
  <div
    className="o-ui-f-neutral-dark-2"
  />,
  <div
    className="o-ui-f-neutral-dark-3"
  />,
  <div
    className="o-ui-f-neutral-dark-4"
  />,
  <div
    className="o-ui-f-neutral-dark-5"
  />,
  <div
    className="o-ui-f-neutral-dark-6"
  />,
  <div
    className="o-ui-f-neutral-dark-7"
  />,
  <div
    className="o-ui-f-neutral-dark-8"
  />,
  <div
    className="o-ui-f-neutral-dark-9"
  />,
  <div
    className="o-ui-f-neutral-dark-10"
  />,
  <div
    className="o-ui-f-beetle-1"
  />,
  <div
    className="o-ui-f-beetle-2"
  />,
  <div
    className="o-ui-f-beetle-3"
  />,
  <div
    className="o-ui-f-beetle-4"
  />,
  <div
    className="o-ui-f-beetle-5"
  />,
  <div
    className="o-ui-f-beetle-6"
  />,
  <div
    className="o-ui-f-beetle-7"
  />,
  <div
    className="o-ui-f-beetle-8"
  />,
  <div
    className="o-ui-f-beetle-9"
  />,
  <div
    className="o-ui-f-beetle-10"
  />,
  <div
    className="o-ui-f-botanic-1"
  />,
  <div
    className="o-ui-f-botanic-2"
  />,
  <div
    className="o-ui-f-botanic-3"
  />,
  <div
    className="o-ui-f-botanic-4"
  />,
  <div
    className="o-ui-f-botanic-5"
  />,
  <div
    className="o-ui-f-botanic-6"
  />,
  <div
    className="o-ui-f-botanic-7"
  />,
  <div
    className="o-ui-f-botanic-8"
  />,
  <div
    className="o-ui-f-botanic-9"
  />,
  <div
    className="o-ui-f-botanic-10"
  />,
  <div
    className="o-ui-f-primary-1"
  />,
  <div
    className="o-ui-f-primary-2"
  />,
  <div
    className="o-ui-f-primary-3"
  />,
  <div
    className="o-ui-f-primary-4"
  />,
  <div
    className="o-ui-f-primary-5"
  />,
  <div
    className="o-ui-f-primary-6"
  />,
  <div
    className="o-ui-f-primary-7"
  />,
  <div
    className="o-ui-f-primary-8"
  />,
  <div
    className="o-ui-f-primary-9"
  />,
  <div
    className="o-ui-f-primary-10"
  />,
  <div
    className="o-ui-icon-alias-1"
  />,
  <div
    className="o-ui-icon-alias-2"
  />,
  <div
    className="o-ui-icon-alias-info-1"
  />,
  <div
    className="o-ui-icon-alias-negative-1"
  />,
  <div
    className="o-ui-icon-alias-negative-2"
  />,
  <div
    className="o-ui-icon-alias-positive-1"
  />,
  <div
    className="o-ui-icon-alias-positive-2"
  />,
  <div
    className="o-ui-icon-alias-primary-1"
  />,
  <div
    className="o-ui-icon-alias-warning-1"
  />,
  <div
    className="o-ui-icon-alias-warning-2"
  />,
]
`;

exports[`filter 1`] = `
<div
  style={
    Object {
      "filter": "blur(5px)",
    }
  }
/>
`;

exports[`flex 1`] = `
Array [
  <div
    className="o-ui-f-a"
  />,
  <div
    className="o-ui-f-mx"
  />,
  <div
    className="o-ui-f-mn"
  />,
  <div
    className="o-ui-f-n"
  />,
]
`;

exports[`flex basis 1`] = `
Array [
  <div
    className="o-ui-fb-a"
  />,
  <div
    className="o-ui-fb-c"
  />,
  <div
    className="o-ui-fb-f"
  />,
  <div
    className="o-ui-fb-f"
  />,
  <div
    className="o-ui-fb-mxc"
  />,
  <div
    className="o-ui-fb-mnc"
  />,
]
`;

exports[`flex flow 1`] = `
Array [
  <div
    className="o-ui-fd-r o-ui-fw-w"
  />,
  <div
    className="o-ui-fd-rr o-ui-fw-nw"
  />,
  <div
    className="o-ui-fd-c o-ui-fw-wr"
  />,
  <div
    className="o-ui-fd-c o-ui-fw-w"
  />,
]
`;

exports[`flex grow 1`] = `
Array [
  <div
    className="o-ui-fg-0"
  />,
  <div
    className="o-ui-fg-1"
  />,
  <div
    className="o-ui-fg-2"
  />,
]
`;

exports[`flex shrink 1`] = `
Array [
  <div
    className="o-ui-fg-0"
  />,
  <div
    className="o-ui-fg-1"
  />,
  <div
    className="o-ui-fg-2"
  />,
]
`;

exports[`flex wrap 1`] = `
Array [
  <div
    className="o-ui-fw-nw"
  />,
  <div
    className="o-ui-fw-w"
  />,
  <div
    className="o-ui-fw-wr"
  />,
]
`;

exports[`font feature settings 1`] = `
<div
  style={
    Object {
      "fontFeatureSettings": "smcp",
    }
  }
/>
`;

exports[`font kerning 1`] = `
<div
  style={
    Object {
      "fontKerning": "normal",
    }
  }
/>
`;

exports[`font size 1`] = `
Array [
  <div
    className="o-ui-fs-1"
  />,
  <div
    className="o-ui-fs-2"
  />,
  <div
    className="o-ui-fs-3"
  />,
  <div
    className="o-ui-fs-4"
  />,
  <div
    className="o-ui-fs-5"
  />,
  <div
    className="o-ui-fs-6"
  />,
  <div
    className="o-ui-fs-7"
  />,
  <div
    className="o-ui-fs-8"
  />,
  <div
    className="o-ui-fs-9"
  />,
  <div
    className="o-ui-headline"
  />,
  <div
    className="o-ui-subheadline"
  />,
]
`;

exports[`font variant 1`] = `
<div
  style={
    Object {
      "fontVariant": "small-caps",
    }
  }
/>
`;

exports[`font variations settings 1`] = `
<div
  fontVariationsSettings="'XHGT' 0.7"
/>
`;

exports[`font weight 1`] = `
Array [
  <div
    className="o-ui-fw-1"
  />,
  <div
    className="o-ui-fw-2"
  />,
  <div
    className="o-ui-fw-3"
  />,
  <div
    className="o-ui-fw-4"
  />,
  <div
    className="o-ui-fw-5"
  />,
  <div
    className="o-ui-fw-6"
  />,
  <div
    className="o-ui-fw-7"
  />,
  <div
    className="o-ui-fw-8"
  />,
  <div
    className="o-ui-fw-9"
  />,
]
`;

exports[`gap 1`] = `
Array [
  <div
    className="o-ui-g-0"
  />,
  <div
    className="o-ui-g-1"
  />,
  <div
    className="o-ui-g-2"
  />,
  <div
    className="o-ui-g-3"
  />,
  <div
    className="o-ui-g-4"
  />,
  <div
    className="o-ui-g-5"
  />,
  <div
    className="o-ui-g-6"
  />,
  <div
    className="o-ui-g-7"
  />,
  <div
    className="o-ui-g-8"
  />,
  <div
    className="o-ui-g-9"
  />,
  <div
    className="o-ui-g-10"
  />,
  <div
    className="o-ui-g-11"
  />,
  <div
    className="o-ui-g-12"
  />,
  <div
    className="o-ui-g-13"
  />,
]
`;

exports[`height 1`] = `
Array [
  <div
    className="o-ui-h-0"
  />,
  <div
    className="o-ui-h-1"
  />,
  <div
    className="o-ui-h-2"
  />,
  <div
    className="o-ui-h-3"
  />,
  <div
    className="o-ui-h-4"
  />,
  <div
    className="o-ui-h-5"
  />,
  <div
    className="o-ui-h-6"
  />,
  <div
    className="o-ui-h-7"
  />,
  <div
    className="o-ui-h-8"
  />,
  <div
    className="o-ui-h-9"
  />,
  <div
    className="o-ui-h-10"
  />,
  <div
    className="o-ui-h-11"
  />,
  <div
    className="o-ui-h-12"
  />,
  <div
    className="o-ui-h-13"
  />,
  <div
    className="o-ui-h-100"
  />,
  <div
    className="o-ui-h-a"
  />,
  <div
    className="o-ui-h-fc"
  />,
  <div
    className="o-ui-h-mxc"
  />,
  <div
    className="o-ui-h-mnc"
  />,
  <div
    className="o-ui-h-s"
  />,
]
`;

exports[`justify content 1`] = `
Array [
  <div
    className="o-ui-jc-c"
  />,
  <div
    className="o-ui-jc-fe"
  />,
  <div
    className="o-ui-jc-l"
  />,
  <div
    className="o-ui-jc-n"
  />,
  <div
    className="o-ui-jc-r"
  />,
  <div
    className="o-ui-jc-sa"
  />,
  <div
    className="o-ui-jc-sb"
  />,
  <div
    className="o-ui-jc-sevn"
  />,
  <div
    className="o-ui-jc-fs"
  />,
  <div
    className="o-ui-jc-str"
  />,
]
`;

exports[`justify items 1`] = `
<div
  style={
    Object {
      "justifyItems": "center",
    }
  }
/>
`;

exports[`justify self 1`] = `
<div
  style={
    Object {
      "justifySelf": "center",
    }
  }
/>
`;

exports[`left 1`] = `
<div
  style={
    Object {
      "left": "1px",
    }
  }
/>
`;

exports[`letter spacing 1`] = `
<div
  style={
    Object {
      "letterSpacing": "1px",
    }
  }
/>
`;

exports[`line height 1`] = `
Array [
  <div
    className="o-ui-lh-1"
  />,
  <div
    className="o-ui-lh-2"
  />,
  <div
    className="o-ui-lh-3"
  />,
  <div
    className="o-ui-lh-4"
  />,
  <div
    className="o-ui-lh-5"
  />,
  <div
    className="o-ui-lh-6"
  />,
  <div
    className="o-ui-lh-n"
  />,
]
`;

exports[`margin 1`] = `
Array [
  <div
    className="o-ui-ma-0"
  />,
  <div
    className="o-ui-ma-1"
  />,
  <div
    className="o-ui-ma-2"
  />,
  <div
    className="o-ui-ma-3"
  />,
  <div
    className="o-ui-ma-4"
  />,
  <div
    className="o-ui-ma-5"
  />,
  <div
    className="o-ui-ma-6"
  />,
  <div
    className="o-ui-ma-7"
  />,
  <div
    className="o-ui-ma-8"
  />,
  <div
    className="o-ui-ma-9"
  />,
  <div
    className="o-ui-ma-10"
  />,
  <div
    className="o-ui-ma-11"
  />,
  <div
    className="o-ui-ma-12"
  />,
  <div
    className="o-ui-ma-13"
  />,
  <div
    className="o-ui-ma-a"
  />,
]
`;

exports[`margin bottom 1`] = `
Array [
  <div
    className="o-ui-mb-0"
  />,
  <div
    className="o-ui-mb-1"
  />,
  <div
    className="o-ui-mb-2"
  />,
  <div
    className="o-ui-mb-3"
  />,
  <div
    className="o-ui-mb-4"
  />,
  <div
    className="o-ui-mb-5"
  />,
  <div
    className="o-ui-mb-6"
  />,
  <div
    className="o-ui-mb-7"
  />,
  <div
    className="o-ui-mb-8"
  />,
  <div
    className="o-ui-mb-9"
  />,
  <div
    className="o-ui-mb-10"
  />,
  <div
    className="o-ui-mb-11"
  />,
  <div
    className="o-ui-mb-12"
  />,
  <div
    className="o-ui-mb-13"
  />,
  <div
    className="o-ui-mb-a"
  />,
]
`;

exports[`margin left 1`] = `
Array [
  <div
    className="o-ui-ml-0"
  />,
  <div
    className="o-ui-ml-1"
  />,
  <div
    className="o-ui-ml-2"
  />,
  <div
    className="o-ui-ml-3"
  />,
  <div
    className="o-ui-ml-4"
  />,
  <div
    className="o-ui-ml-5"
  />,
  <div
    className="o-ui-ml-6"
  />,
  <div
    className="o-ui-ml-7"
  />,
  <div
    className="o-ui-ml-8"
  />,
  <div
    className="o-ui-ml-9"
  />,
  <div
    className="o-ui-ml-10"
  />,
  <div
    className="o-ui-ml-11"
  />,
  <div
    className="o-ui-ml-12"
  />,
  <div
    className="o-ui-ml-13"
  />,
  <div
    className="o-ui-ml-a"
  />,
]
`;

exports[`margin right 1`] = `
Array [
  <div
    className="o-ui-mr-0"
  />,
  <div
    className="o-ui-mr-1"
  />,
  <div
    className="o-ui-mr-2"
  />,
  <div
    className="o-ui-mr-3"
  />,
  <div
    className="o-ui-mr-4"
  />,
  <div
    className="o-ui-mr-5"
  />,
  <div
    className="o-ui-mr-6"
  />,
  <div
    className="o-ui-mr-7"
  />,
  <div
    className="o-ui-mr-8"
  />,
  <div
    className="o-ui-mr-9"
  />,
  <div
    className="o-ui-mr-10"
  />,
  <div
    className="o-ui-mr-11"
  />,
  <div
    className="o-ui-mr-12"
  />,
  <div
    className="o-ui-mr-13"
  />,
  <div
    className="o-ui-mr-a"
  />,
]
`;

exports[`margin top 1`] = `
Array [
  <div
    className="o-ui-mt-0"
  />,
  <div
    className="o-ui-mt-1"
  />,
  <div
    className="o-ui-mt-2"
  />,
  <div
    className="o-ui-mt-3"
  />,
  <div
    className="o-ui-mt-4"
  />,
  <div
    className="o-ui-mt-5"
  />,
  <div
    className="o-ui-mt-6"
  />,
  <div
    className="o-ui-mt-7"
  />,
  <div
    className="o-ui-mt-8"
  />,
  <div
    className="o-ui-mt-9"
  />,
  <div
    className="o-ui-mt-10"
  />,
  <div
    className="o-ui-mt-11"
  />,
  <div
    className="o-ui-mt-12"
  />,
  <div
    className="o-ui-mt-13"
  />,
  <div
    className="o-ui-mt-a"
  />,
]
`;

exports[`margin x 1`] = `
Array [
  <div
    className="o-ui-mh-0"
  />,
  <div
    className="o-ui-mh-1"
  />,
  <div
    className="o-ui-mh-2"
  />,
  <div
    className="o-ui-mh-3"
  />,
  <div
    className="o-ui-mh-4"
  />,
  <div
    className="o-ui-mh-5"
  />,
  <div
    className="o-ui-mh-6"
  />,
  <div
    className="o-ui-mh-7"
  />,
  <div
    className="o-ui-mh-8"
  />,
  <div
    className="o-ui-mh-9"
  />,
  <div
    className="o-ui-mh-10"
  />,
  <div
    className="o-ui-mh-11"
  />,
  <div
    className="o-ui-mh-12"
  />,
  <div
    className="o-ui-mh-13"
  />,
  <div
    className="o-ui-mh-a"
  />,
]
`;

exports[`margin y 1`] = `
Array [
  <div
    className="o-ui-mv-0"
  />,
  <div
    className="o-ui-mv-1"
  />,
  <div
    className="o-ui-mv-2"
  />,
  <div
    className="o-ui-mv-3"
  />,
  <div
    className="o-ui-mv-4"
  />,
  <div
    className="o-ui-mv-5"
  />,
  <div
    className="o-ui-mv-6"
  />,
  <div
    className="o-ui-mv-7"
  />,
  <div
    className="o-ui-mv-8"
  />,
  <div
    className="o-ui-mv-9"
  />,
  <div
    className="o-ui-mv-10"
  />,
  <div
    className="o-ui-mv-11"
  />,
  <div
    className="o-ui-mv-12"
  />,
  <div
    className="o-ui-mv-13"
  />,
  <div
    className="o-ui-mv-a"
  />,
]
`;

exports[`max height 1`] = `
<div
  style={
    Object {
      "maxHeight": "1px",
    }
  }
/>
`;

exports[`max width 1`] = `
<div
  style={
    Object {
      "maxWidth": "1px",
    }
  }
/>
`;

exports[`min height 1`] = `
<div
  style={
    Object {
      "minHeight": "1px",
    }
  }
/>
`;

exports[`min width 1`] = `
<div
  style={
    Object {
      "minWidth": "1px",
    }
  }
/>
`;

exports[`object fit 1`] = `
Array [
  <div
    className="o-ui-of-cnt"
  />,
  <div
    className="o-ui-of-cvr"
  />,
  <div
    className="o-ui-of-f"
  />,
  <div
    className="o-ui-of-n"
  />,
  <div
    className="o-ui-of-sd"
  />,
]
`;

exports[`opacity 1`] = `
Array [
  <div
    className="o-ui-op-d"
  />,
  <div
    className="o-ui-op-nv"
  />,
  <div
    className="o-ui-op-v"
  />,
]
`;

exports[`order 1`] = `
Array [
  <div
    style={
      Object {
        "order": 1,
      }
    }
  />,
  <div
    style={
      Object {
        "order": "inherit",
      }
    }
  />,
]
`;

exports[`outline 1`] = `
<div
  className="o-ui-o-n"
/>
`;

exports[`overflow 1`] = `
Array [
  <div
    className="o-ui-ov-a"
  />,
  <div
    className="o-ui-ov-c"
  />,
  <div
    className="o-ui-ov-h"
  />,
  <div
    className="o-ui-ov-s"
  />,
  <div
    className="o-ui-ov-v"
  />,
]
`;

exports[`overflow x 1`] = `
Array [
  <div
    className="o-ui-ov-x-a"
  />,
  <div
    className="o-ui-ov-x-c"
  />,
  <div
    className="o-ui-ov-x-h"
  />,
  <div
    className="o-ui-ov-x-s"
  />,
  <div
    className="o-ui-ov-x-v"
  />,
]
`;

exports[`overflow y 1`] = `
Array [
  <div
    className="o-ui-ov-y-a"
  />,
  <div
    className="o-ui-ov-y-c"
  />,
  <div
    className="o-ui-ov-y-h"
  />,
  <div
    className="o-ui-ov-y-s"
  />,
  <div
    className="o-ui-ov-y-v"
  />,
]
`;

exports[`padding 1`] = `
Array [
  <div
    className="o-ui-pa-0"
  />,
  <div
    className="o-ui-pa-1"
  />,
  <div
    className="o-ui-pa-2"
  />,
  <div
    className="o-ui-pa-3"
  />,
  <div
    className="o-ui-pa-4"
  />,
  <div
    className="o-ui-pa-5"
  />,
  <div
    className="o-ui-pa-6"
  />,
  <div
    className="o-ui-pa-7"
  />,
  <div
    className="o-ui-pa-8"
  />,
  <div
    className="o-ui-pa-9"
  />,
  <div
    className="o-ui-pa-10"
  />,
  <div
    className="o-ui-pa-11"
  />,
  <div
    className="o-ui-pa-12"
  />,
  <div
    className="o-ui-pa-13"
  />,
]
`;

exports[`padding bottom 1`] = `
Array [
  <div
    className="o-ui-pb-0"
  />,
  <div
    className="o-ui-pb-1"
  />,
  <div
    className="o-ui-pb-2"
  />,
  <div
    className="o-ui-pb-3"
  />,
  <div
    className="o-ui-pb-4"
  />,
  <div
    className="o-ui-pb-5"
  />,
  <div
    className="o-ui-pb-6"
  />,
  <div
    className="o-ui-pb-7"
  />,
  <div
    className="o-ui-pb-8"
  />,
  <div
    className="o-ui-pb-9"
  />,
  <div
    className="o-ui-pb-10"
  />,
  <div
    className="o-ui-pb-11"
  />,
  <div
    className="o-ui-pb-12"
  />,
  <div
    className="o-ui-pb-13"
  />,
]
`;

exports[`padding left 1`] = `
Array [
  <div
    className="o-ui-pl-0"
  />,
  <div
    className="o-ui-pl-1"
  />,
  <div
    className="o-ui-pl-2"
  />,
  <div
    className="o-ui-pl-3"
  />,
  <div
    className="o-ui-pl-4"
  />,
  <div
    className="o-ui-pl-5"
  />,
  <div
    className="o-ui-pl-6"
  />,
  <div
    className="o-ui-pl-7"
  />,
  <div
    className="o-ui-pl-8"
  />,
  <div
    className="o-ui-pl-9"
  />,
  <div
    className="o-ui-pl-10"
  />,
  <div
    className="o-ui-pl-11"
  />,
  <div
    className="o-ui-pl-12"
  />,
  <div
    className="o-ui-pl-13"
  />,
]
`;

exports[`padding right 1`] = `
Array [
  <div
    className="o-ui-pr-0"
  />,
  <div
    className="o-ui-pr-1"
  />,
  <div
    className="o-ui-pr-2"
  />,
  <div
    className="o-ui-pr-3"
  />,
  <div
    className="o-ui-pr-4"
  />,
  <div
    className="o-ui-pr-5"
  />,
  <div
    className="o-ui-pr-6"
  />,
  <div
    className="o-ui-pr-7"
  />,
  <div
    className="o-ui-pr-8"
  />,
  <div
    className="o-ui-pr-9"
  />,
  <div
    className="o-ui-pr-10"
  />,
  <div
    className="o-ui-pr-11"
  />,
  <div
    className="o-ui-pr-12"
  />,
  <div
    className="o-ui-pr-13"
  />,
]
`;

exports[`padding top 1`] = `
Array [
  <div
    className="o-ui-pt-0"
  />,
  <div
    className="o-ui-pt-1"
  />,
  <div
    className="o-ui-pt-2"
  />,
  <div
    className="o-ui-pt-3"
  />,
  <div
    className="o-ui-pt-4"
  />,
  <div
    className="o-ui-pt-5"
  />,
  <div
    className="o-ui-pt-6"
  />,
  <div
    className="o-ui-pt-7"
  />,
  <div
    className="o-ui-pt-8"
  />,
  <div
    className="o-ui-pt-9"
  />,
  <div
    className="o-ui-pt-10"
  />,
  <div
    className="o-ui-pt-11"
  />,
  <div
    className="o-ui-pt-12"
  />,
  <div
    className="o-ui-pt-13"
  />,
]
`;

exports[`padding x 1`] = `
Array [
  <div
    className="o-ui-ph-0"
  />,
  <div
    className="o-ui-ph-1"
  />,
  <div
    className="o-ui-ph-2"
  />,
  <div
    className="o-ui-ph-3"
  />,
  <div
    className="o-ui-ph-4"
  />,
  <div
    className="o-ui-ph-5"
  />,
  <div
    className="o-ui-ph-6"
  />,
  <div
    className="o-ui-ph-7"
  />,
  <div
    className="o-ui-ph-8"
  />,
  <div
    className="o-ui-ph-9"
  />,
  <div
    className="o-ui-ph-10"
  />,
  <div
    className="o-ui-ph-11"
  />,
  <div
    className="o-ui-ph-12"
  />,
  <div
    className="o-ui-ph-13"
  />,
]
`;

exports[`padding y 1`] = `
Array [
  <div
    className="o-ui-pv-0"
  />,
  <div
    className="o-ui-pv-1"
  />,
  <div
    className="o-ui-pv-2"
  />,
  <div
    className="o-ui-pv-3"
  />,
  <div
    className="o-ui-pv-4"
  />,
  <div
    className="o-ui-pv-5"
  />,
  <div
    className="o-ui-pv-6"
  />,
  <div
    className="o-ui-pv-7"
  />,
  <div
    className="o-ui-pv-8"
  />,
  <div
    className="o-ui-pv-9"
  />,
  <div
    className="o-ui-pv-10"
  />,
  <div
    className="o-ui-pv-11"
  />,
  <div
    className="o-ui-pv-12"
  />,
  <div
    className="o-ui-pv-13"
  />,
]
`;

exports[`pointer events 1`] = `
Array [
  <div
    pointerEvents="auto"
  />,
  <div
    pointerEvents="none"
  />,
]
`;

exports[`position 1`] = `
Array [
  <div
    className="o-ui-p-a"
  />,
  <div
    className="o-ui-p-f"
  />,
  <div
    className="o-ui-p-r"
  />,
  <div
    className="o-ui-p-stc"
  />,
  <div
    className="o-ui-p-stck"
  />,
]
`;

exports[`resize 1`] = `
Array [
  <div
    className="o-ui-rsz-b"
  />,
  <div
    className="o-ui-rsz-h"
  />,
  <div
    className="o-ui-rsz-n"
  />,
  <div
    className="o-ui-rsz-v"
  />,
]
`;

exports[`right 1`] = `
<div
  style={
    Object {
      "right": "1px",
    }
  }
/>
`;

exports[`row gap 1`] = `
Array [
  <div
    className="o-ui-r-g-0"
  />,
  <div
    className="o-ui-r-g-1"
  />,
  <div
    className="o-ui-r-g-2"
  />,
  <div
    className="o-ui-r-g-3"
  />,
  <div
    className="o-ui-r-g-4"
  />,
  <div
    className="o-ui-r-g-5"
  />,
  <div
    className="o-ui-r-g-6"
  />,
  <div
    className="o-ui-r-g-7"
  />,
  <div
    className="o-ui-r-g-8"
  />,
  <div
    className="o-ui-r-g-9"
  />,
  <div
    className="o-ui-r-g-10"
  />,
  <div
    className="o-ui-r-g-11"
  />,
  <div
    className="o-ui-r-g-12"
  />,
  <div
    className="o-ui-r-g-13"
  />,
]
`;

exports[`stroke 1`] = `
Array [
  <div
    className="o-ui-stroke-inherit"
  />,
  <div
    className="o-ui-stroke-current"
  />,
  <div
    className="o-ui-stroke-transparent"
  />,
  <div
    className="o-ui-stroke-white"
  />,
  <div
    className="o-ui-stroke-black"
  />,
  <div
    className="o-ui-stroke-marine-1"
  />,
  <div
    className="o-ui-stroke-marine-2"
  />,
  <div
    className="o-ui-stroke-marine-3"
  />,
  <div
    className="o-ui-stroke-marine-4"
  />,
  <div
    className="o-ui-stroke-marine-5"
  />,
  <div
    className="o-ui-stroke-marine-6"
  />,
  <div
    className="o-ui-stroke-marine-7"
  />,
  <div
    className="o-ui-stroke-marine-8"
  />,
  <div
    className="o-ui-stroke-marine-9"
  />,
  <div
    className="o-ui-stroke-marine-10"
  />,
  <div
    className="o-ui-stroke-sunray-1"
  />,
  <div
    className="o-ui-stroke-sunray-2"
  />,
  <div
    className="o-ui-stroke-sunray-3"
  />,
  <div
    className="o-ui-stroke-sunray-4"
  />,
  <div
    className="o-ui-stroke-sunray-5"
  />,
  <div
    className="o-ui-stroke-sunray-6"
  />,
  <div
    className="o-ui-stroke-sunray-7"
  />,
  <div
    className="o-ui-stroke-sunray-8"
  />,
  <div
    className="o-ui-stroke-sunray-9"
  />,
  <div
    className="o-ui-stroke-sunray-10"
  />,
  <div
    className="o-ui-stroke-moonstone-1"
  />,
  <div
    className="o-ui-stroke-moonstone-2"
  />,
  <div
    className="o-ui-stroke-moonstone-3"
  />,
  <div
    className="o-ui-stroke-moonstone-4"
  />,
  <div
    className="o-ui-stroke-moonstone-5"
  />,
  <div
    className="o-ui-stroke-moonstone-6"
  />,
  <div
    className="o-ui-stroke-moonstone-7"
  />,
  <div
    className="o-ui-stroke-moonstone-8"
  />,
  <div
    className="o-ui-stroke-moonstone-9"
  />,
  <div
    className="o-ui-stroke-moonstone-10"
  />,
  <div
    className="o-ui-stroke-cloud-1"
  />,
  <div
    className="o-ui-stroke-cloud-2"
  />,
  <div
    className="o-ui-stroke-cloud-3"
  />,
  <div
    className="o-ui-stroke-cloud-4"
  />,
  <div
    className="o-ui-stroke-cloud-5"
  />,
  <div
    className="o-ui-stroke-cloud-6"
  />,
  <div
    className="o-ui-stroke-cloud-7"
  />,
  <div
    className="o-ui-stroke-cloud-8"
  />,
  <div
    className="o-ui-stroke-cloud-10"
  />,
  <div
    className="o-ui-stroke-neutral-1"
  />,
  <div
    className="o-ui-stroke-neutral-2"
  />,
  <div
    className="o-ui-stroke-neutral-3"
  />,
  <div
    className="o-ui-stroke-neutral-4"
  />,
  <div
    className="o-ui-stroke-neutral-5"
  />,
  <div
    className="o-ui-stroke-neutral-6"
  />,
  <div
    className="o-ui-stroke-neutral-7"
  />,
  <div
    className="o-ui-stroke-neutral-8"
  />,
  <div
    className="o-ui-stroke-neutral-9"
  />,
  <div
    className="o-ui-stroke-neutral-10"
  />,
  <div
    className="o-ui-stroke-neutral-dark-1"
  />,
  <div
    className="o-ui-stroke-neutral-dark-2"
  />,
  <div
    className="o-ui-stroke-neutral-dark-3"
  />,
  <div
    className="o-ui-stroke-neutral-dark-4"
  />,
  <div
    className="o-ui-stroke-neutral-dark-5"
  />,
  <div
    className="o-ui-stroke-neutral-dark-6"
  />,
  <div
    className="o-ui-stroke-neutral-dark-7"
  />,
  <div
    className="o-ui-stroke-neutral-dark-8"
  />,
  <div
    className="o-ui-stroke-neutral-dark-9"
  />,
  <div
    className="o-ui-stroke-neutral-dark-10"
  />,
  <div
    className="o-ui-stroke-beetle-1"
  />,
  <div
    className="o-ui-stroke-beetle-2"
  />,
  <div
    className="o-ui-stroke-beetle-3"
  />,
  <div
    className="o-ui-stroke-beetle-4"
  />,
  <div
    className="o-ui-stroke-beetle-5"
  />,
  <div
    className="o-ui-stroke-beetle-6"
  />,
  <div
    className="o-ui-stroke-beetle-7"
  />,
  <div
    className="o-ui-stroke-beetle-8"
  />,
  <div
    className="o-ui-stroke-beetle-9"
  />,
  <div
    className="o-ui-stroke-beetle-10"
  />,
  <div
    className="o-ui-stroke-botanic-1"
  />,
  <div
    className="o-ui-stroke-botanic-2"
  />,
  <div
    className="o-ui-stroke-botanic-3"
  />,
  <div
    className="o-ui-stroke-botanic-4"
  />,
  <div
    className="o-ui-stroke-botanic-5"
  />,
  <div
    className="o-ui-stroke-botanic-6"
  />,
  <div
    className="o-ui-stroke-botanic-7"
  />,
  <div
    className="o-ui-stroke-botanic-8"
  />,
  <div
    className="o-ui-stroke-botanic-9"
  />,
  <div
    className="o-ui-stroke-botanic-10"
  />,
  <div
    className="o-ui-stroke-primary-1"
  />,
  <div
    className="o-ui-stroke-primary-2"
  />,
  <div
    className="o-ui-stroke-primary-3"
  />,
  <div
    className="o-ui-stroke-primary-4"
  />,
  <div
    className="o-ui-stroke-primary-5"
  />,
  <div
    className="o-ui-stroke-primary-6"
  />,
  <div
    className="o-ui-stroke-primary-7"
  />,
  <div
    className="o-ui-stroke-primary-8"
  />,
  <div
    className="o-ui-stroke-primary-9"
  />,
  <div
    className="o-ui-stroke-primary-10"
  />,
  <div
    className="o-ui-icon-alias-1"
  />,
  <div
    className="o-ui-icon-alias-2"
  />,
  <div
    className="o-ui-icon-alias-info-1"
  />,
  <div
    className="o-ui-icon-alias-negative-1"
  />,
  <div
    className="o-ui-icon-alias-negative-2"
  />,
  <div
    className="o-ui-icon-alias-positive-1"
  />,
  <div
    className="o-ui-icon-alias-positive-2"
  />,
  <div
    className="o-ui-icon-alias-primary-1"
  />,
  <div
    className="o-ui-icon-alias-warning-1"
  />,
  <div
    className="o-ui-icon-alias-warning-2"
  />,
]
`;

exports[`text align 1`] = `
Array [
  <div
    className="o-ui-ta-c"
  />,
  <div
    className="o-ui-ta-e"
  />,
  <div
    className="o-ui-ta-j"
  />,
  <div
    className="o-ui-ta-ja"
  />,
  <div
    className="o-ui-ta-l"
  />,
  <div
    className="o-ui-ta-mp"
  />,
  <div
    className="o-ui-ta-r"
  />,
  <div
    className="o-ui-ta-s"
  />,
]
`;

exports[`text decoration 1`] = `
Array [
  <div
    style={
      Object {
        "textDecoration": "underline",
      }
    }
  />,
  <div
    style={
      Object {
        "textDecoration": "underline overline #FF3028",
      }
    }
  />,
]
`;

exports[`text overflow 1`] = `
Array [
  <div
    className="o-ui-tov-c"
  />,
  <div
    className="o-ui-tov-e"
  />,
]
`;

exports[`text transform 1`] = `
Array [
  <div
    className="o-ui-tt-c"
  />,
  <div
    className="o-ui-tt-l"
  />,
  <div
    className="o-ui-tt-n"
  />,
  <div
    className="o-ui-tt-u"
  />,
]
`;

exports[`top 1`] = `
<div
  style={
    Object {
      "top": "1px",
    }
  }
/>
`;

exports[`transform 1`] = `
<div
  style={
    Object {
      "transform": "rotate(2deg) scale(2)",
    }
  }
/>
`;

exports[`transform origin 1`] = `
<div
  style={
    Object {
      "transformOrigin": "top center",
    }
  }
/>
`;

exports[`transform style 1`] = `
<div
  style={
    Object {
      "transformStyle": "preserve-3d",
    }
  }
/>
`;

exports[`user select 1`] = `
Array [
  <div
    style={
      Object {
        "userSelect": "none",
      }
    }
  />,
  <div
    style={
      Object {
        "userSelect": "auto",
      }
    }
  />,
  <div
    style={
      Object {
        "userSelect": "text",
      }
    }
  />,
  <div
    style={
      Object {
        "userSelect": "contain",
      }
    }
  />,
  <div
    style={
      Object {
        "userSelect": "all",
      }
    }
  />,
]
`;

exports[`vertical align 1`] = `
Array [
  <div
    verticalALign="baseline"
  />,
  <div
    verticalALign="bottom"
  />,
  <div
    verticalALign="middle"
  />,
  <div
    verticalALign="sub"
  />,
  <div
    verticalALign="super"
  />,
  <div
    verticalALign="text-bottom"
  />,
  <div
    verticalALign="text-top"
  />,
  <div
    verticalALign="top"
  />,
]
`;

exports[`visibility 1`] = `
<div
  style={
    Object {
      "visibility": "hidden",
    }
  }
/>
`;

exports[`white-space 1`] = `
Array [
  <div
    className="o-ui-ws-bs"
  />,
  <div
    className="o-ui-ws-n"
  />,
  <div
    className="o-ui-ws-nw"
  />,
  <div
    className="o-ui-ws-p"
  />,
  <div
    className="o-ui-ws-pl"
  />,
  <div
    className="o-ui-ws-pw"
  />,
]
`;

exports[`width 1`] = `
Array [
  <div
    className="o-ui-w-0"
  />,
  <div
    className="o-ui-w-1"
  />,
  <div
    className="o-ui-w-2"
  />,
  <div
    className="o-ui-w-3"
  />,
  <div
    className="o-ui-w-4"
  />,
  <div
    className="o-ui-w-5"
  />,
  <div
    className="o-ui-w-6"
  />,
  <div
    className="o-ui-w-7"
  />,
  <div
    className="o-ui-w-8"
  />,
  <div
    className="o-ui-w-9"
  />,
  <div
    className="o-ui-w-10"
  />,
  <div
    className="o-ui-w-11"
  />,
  <div
    className="o-ui-w-12"
  />,
  <div
    className="o-ui-w-13"
  />,
  <div
    className="o-ui-w-100"
  />,
  <div
    className="o-ui-w-a"
  />,
  <div
    className="o-ui-w-f"
  />,
  <div
    className="o-ui-w-mx"
  />,
  <div
    className="o-ui-w-mn"
  />,
  <div
    className="o-ui-w-s"
  />,
]
`;

exports[`will-change 1`] = `
<div
  style={
    Object {
      "willChange": "contents",
    }
  }
/>
`;

exports[`work-break 1`] = `
Array [
  <div
    className="o-ui-wob-b"
  />,
  <div
    className="o-ui-wob-bw"
  />,
  <div
    className="o-ui-wob-ka"
  />,
  <div
    className="o-ui-wob-n"
  />,
]
`;

exports[`z-index 1`] = `
<div
  style={
    Object {
      "zIndex": "1",
    }
  }
/>
`;
